Refactor user management to use SharePoint data sources
Reworked the user management screen to load users, departments, and roles from SharePoint data sources instead of hardcoded collections. Updated data table, forms, and dropdowns to use new collections and field names, and improved the logic for displaying and editing user details. This enhances maintainability and ensures data consistency with SharePoint.

--- a/rmv_version.ipynb
+++ b/rmv_version.ipynb
@@ -126,6 +126,20 @@
     "    \n",
     "    # Attachments versions\n",
     "    r'Attachments@\\d+\\.\\d+\\.\\d+': 'Attachments',\n",
+    "    \n",
+    "    # TypedDataCard versions\n",
+    "    r'TypedDataCard@\\d+\\.\\d+\\.\\d+': 'TypedDataCard',\n",
+    "    \n",
+    "    # FormViewer versions\n",
+    "    r'FormViewer@\\d+\\.\\d+\\.\\d+': 'FormViewer',\n",
+    "    \n",
+    "    # DataCard versions\n",
+    "    r'DataCard@\\d+\\.\\d+\\.\\d+': 'DataCard',\n",
+    "    \n",
+    "    # DataCardValue versions\n",
+    "    r'DataCardValue@\\d+\\.\\d+\\.\\d+': 'DataCardValue',\n",
+    "    \n",
+    "    \n",
     "}\n",
     "\n",
     "def remove_control_versions(file_path):\n",
@@ -188,42 +202,68 @@
     "        print(f\"❌ Error processing file: {str(e)}\")\n",
     "        return False\n",
     "\n",
-    "def main():\n",
-    "    \"\"\"Main function to handle command line arguments and execute the script.\"\"\"\n",
-    "    \n",
-    "    # Check command line arguments\n",
-    "    if len(sys.argv) != 2:\n",
-    "        print(\"🔧 PowerApps YAML Control Version Remover\")\n",
-    "        print(\"=\" * 50)\n",
-    "        print(\"Usage: python remove_control_versions.py <file_path>\")\n",
-    "        print(\"Example: python remove_control_versions.py UserManagementScreen.yaml\")\n",
-    "        print(\"\\nThis script will:\")\n",
-    "        print(\"  • Remove version numbers from all PowerApps control declarations\")\n",
-    "        print(\"  • Create a backup of the original file (.backup extension)\")\n",
-    "        print(\"  • Update the file with clean control names\")\n",
-    "        sys.exit(1)\n",
-    "    \n",
-    "    file_path = input(\"Enter the path to the YAML file or name of yaml file: \")\n",
-    "    \n",
-    "    print(\"🔧 PowerApps YAML Control Version Remover\")\n",
-    "    print(\"=\" * 50)\n",
-    "    print(f\"Target file: {file_path}\")\n",
-    "    print()\n",
-    "    \n",
-    "    # Process the file\n",
-    "    success = remove_control_versions(file_path)\n",
-    "    \n",
-    "    if success:\n",
-    "        print(\"\\n🎉 Process completed successfully!\")\n",
-    "    else:\n",
-    "        print(\"\\n💥 Process failed!\")\n",
-    "        sys.exit(1)\n"
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "5abbfb9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔧 PowerApps YAML Control Version Remover\n",
+      "==================================================\n",
+      "Target file: UserManagementScreen.yaml\n",
+      "\n",
+      "📖 Reading file: UserManagementScreen.yaml\n",
+      "🔄 Processing control version replacements...\n",
+      "  ├─ Found 20 instances of pattern: GroupContainer@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 36 instances of pattern: Label@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 14 instances of pattern: Classic/Button@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 9 instances of pattern: Classic/TextInput@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 4 instances of pattern: DropDown@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 4 instances of pattern: Rectangle@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 1 instances of pattern: Classic/Icon@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 1 instances of pattern: DataTable@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 6 instances of pattern: DataTableColumn@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 1 instances of pattern: Form@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 2 instances of pattern: ComboBox@\\d+\\.\\d+\\.\\d+\n",
+      "💾 Creating backup: UserManagementScreen.yaml.backup\n",
+      "✏️  Writing cleaned content back to: UserManagementScreen.yaml\n",
+      "✅ Successfully removed 98 version numbers!\n",
+      "📁 Original file backed up to: UserManagementScreen.yaml.backup\n",
+      "\n",
+      "🎉 Process completed successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "file_path = 'UserManagementScreen.yaml'\n",
+    "\n",
+    "print(\"🔧 PowerApps YAML Control Version Remover\")\n",
+    "print(\"=\" * 50)\n",
+    "print(f\"Target file: {file_path}\")\n",
+    "print()\n",
+    "\n",
+    "# Process the file\n",
+    "success = remove_control_versions(file_path)\n",
+    "\n",
+    "if success:\n",
+    "    print(\"\\n🎉 Process completed successfully!\")\n",
+    "else:\n",
+    "    print(\"\\n💥 Process failed!\")\n",
+    "    sys.exit(1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5abbfb9d",
+   "id": "8b0816c7",
    "metadata": {},
    "outputs": [],
    "source": []
