Enhance user management filters and data handling
Refactored user and role filter dropdowns to use prebuilt collections with 'All' options, improved filtering logic for the user list, and simplified data loading and update logic for SharePoint integration. Updated default values for department and role fields, improved error handling and notification messages, and fixed context menu positioning. Also improved deletion logic to ensure proper removal from both user and role tables, and made UI control property adjustments for better consistency.

--- a/rmv_version.ipynb
+++ b/rmv_version.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "688a5096",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "5abbfb9d",
    "metadata": {},
    "outputs": [
@@ -217,33 +217,34 @@
      "text": [
       "🔧 PowerApps YAML Control Version Remover\n",
       "==================================================\n",
-      "Target file: UserManagementScreen.yaml\n",
+      "Target file: \n",
       "\n",
-      "📖 Reading file: UserManagementScreen.yaml\n",
-      "🔄 Processing control version replacements...\n",
-      "  ├─ Found 20 instances of pattern: GroupContainer@\\d+\\.\\d+\\.\\d+\n",
-      "  ├─ Found 36 instances of pattern: Label@\\d+\\.\\d+\\.\\d+\n",
-      "  ├─ Found 14 instances of pattern: Classic/Button@\\d+\\.\\d+\\.\\d+\n",
-      "  ├─ Found 9 instances of pattern: Classic/TextInput@\\d+\\.\\d+\\.\\d+\n",
-      "  ├─ Found 4 instances of pattern: DropDown@\\d+\\.\\d+\\.\\d+\n",
-      "  ├─ Found 4 instances of pattern: Rectangle@\\d+\\.\\d+\\.\\d+\n",
-      "  ├─ Found 1 instances of pattern: Classic/Icon@\\d+\\.\\d+\\.\\d+\n",
-      "  ├─ Found 1 instances of pattern: DataTable@\\d+\\.\\d+\\.\\d+\n",
-      "  ├─ Found 6 instances of pattern: DataTableColumn@\\d+\\.\\d+\\.\\d+\n",
-      "  ├─ Found 1 instances of pattern: Form@\\d+\\.\\d+\\.\\d+\n",
-      "  ├─ Found 2 instances of pattern: ComboBox@\\d+\\.\\d+\\.\\d+\n",
-      "💾 Creating backup: UserManagementScreen.yaml.backup\n",
-      "✏️  Writing cleaned content back to: UserManagementScreen.yaml\n",
-      "✅ Successfully removed 98 version numbers!\n",
-      "📁 Original file backed up to: UserManagementScreen.yaml.backup\n",
+      "❌ Error: File '' not found!\n",
       "\n",
-      "🎉 Process completed successfully!\n"
+      "💥 Process failed!\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Program Files\\anaconda3\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:3585: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "file_path = 'UserManagementScreen.yaml'\n",
+    "file_path = input(\"Nhập tên file đồng cấp cần xóa\")\n",
     "\n",
     "print(\"🔧 PowerApps YAML Control Version Remover\")\n",
     "print(\"=\" * 50)\n",
