Refactor UserManagementScreen YAML and notebook utilities
Standardized references from User_Role to UserRole and updated lookup logic for user and role IDs in UserManagementScreen.yaml and its backup. Improved UI properties, added 'NoDataText', and fixed control property bindings. In rmv_version.ipynb, added functions to process all YAML files, extract control structures, and improved output and error handling for batch and single-file operations.

--- a/rmv_version.ipynb
+++ b/rmv_version.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "688a5096",
    "metadata": {},
    "outputs": [],
@@ -207,64 +207,335 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
+   "id": "247b9ec6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_all_yaml_files():\n",
+    "    \"\"\"Process all YAML files in current directory to remove control versions, excluding backups.\"\"\"\n",
+    "    import os\n",
+    "    \n",
+    "    print(\"🔍 Scanning for YAML files...\")\n",
+    "    \n",
+    "    # Get all yaml files in current directory\n",
+    "    yaml_files = [f for f in os.listdir('.') if f.endswith('.yaml') and not f.endswith('.backup.yaml')]\n",
+    "    \n",
+    "    if not yaml_files:\n",
+    "        print(\"❌ No YAML files found in current directory!\")\n",
+    "        return False\n",
+    "        \n",
+    "    print(f\"📑 Found {len(yaml_files)} YAML files to process:\")\n",
+    "    for file in yaml_files:\n",
+    "        print(f\"  • {file}\")\n",
+    "    print()\n",
+    "    \n",
+    "    # Process each file\n",
+    "    success_count = 0\n",
+    "    for file in yaml_files:\n",
+    "        print(f\"\\n📄 Processing: {file}\")\n",
+    "        print(\"-\" * 40)\n",
+    "        if remove_control_versions(file):\n",
+    "            success_count += 1\n",
+    "            \n",
+    "    # Summary\n",
+    "    print(\"\\n📊 Summary:\")\n",
+    "    print(f\"Total files processed: {len(yaml_files)}\")\n",
+    "    print(f\"Successfully processed: {success_count}\")\n",
+    "    print(f\"Failed: {len(yaml_files) - success_count}\")\n",
+    "    \n",
+    "    return success_count == len(yaml_files)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "5abbfb9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def process_yaml_file(file_path=None):\n",
+    "    if file_path is None:\n",
+    "        file_path = input(\"Nhập tên file đồng cấp cần xóa\")\n",
+    "\n",
+    "    print(\"🔧 PowerApps YAML Control Version Remover\")\n",
+    "    print(\"=\" * 50)\n",
+    "    print(f\"Target file: {file_path}\")\n",
+    "    print()\n",
+    "\n",
+    "    # Process the file\n",
+    "    success = remove_control_versions(file_path)\n",
+    "\n",
+    "    if success:\n",
+    "        print(\"\\n🎉 Process completed successfully!\")\n",
+    "    else:\n",
+    "        print(\"\\n💥 Process failed!\")\n",
+    "        sys.exit(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8b0816c7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🔧 PowerApps YAML Control Version Remover\n",
-      "==================================================\n",
-      "Target file: \n",
+      "🔍 Scanning for YAML files...\n",
+      "📑 Found 1 YAML files to process:\n",
+      "  • UserManagementScreen.yaml\n",
       "\n",
-      "❌ Error: File '' not found!\n",
       "\n",
-      "💥 Process failed!\n"
+      "📄 Processing: UserManagementScreen.yaml\n",
+      "----------------------------------------\n",
+      "📖 Reading file: UserManagementScreen.yaml\n",
+      "🔄 Processing control version replacements...\n",
+      "  ├─ Found 20 instances of pattern: GroupContainer@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 36 instances of pattern: Label@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 14 instances of pattern: Classic/Button@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 9 instances of pattern: Classic/TextInput@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 4 instances of pattern: DropDown@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 4 instances of pattern: Rectangle@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 1 instances of pattern: Classic/Icon@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 1 instances of pattern: DataTable@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 6 instances of pattern: DataTableColumn@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 1 instances of pattern: Form@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 2 instances of pattern: ComboBox@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 6 instances of pattern: TypedDataCard@\\d+\\.\\d+\\.\\d+\n",
+      "💾 Creating backup: UserManagementScreen.yaml.backup\n",
+      "✏️  Writing cleaned content back to: UserManagementScreen.yaml\n",
+      "✅ Successfully removed 104 version numbers!\n",
+      "📁 Original file backed up to: UserManagementScreen.yaml.backup\n",
+      "\n",
+      "📊 Summary:\n",
+      "Total files processed: 1\n",
+      "Successfully processed: 1\n",
+      "Failed: 0\n"
      ]
     },
     {
-     "ename": "SystemExit",
-     "evalue": "1",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\Program Files\\anaconda3\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:3585: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Chọn truyền 1 file vào hoặc nhập vào input 1 file để sử dụng\n",
+    "# process_yaml_file()\n",
     "\n",
-    "file_path = input(\"Nhập tên file đồng cấp cần xóa\")\n",
+    "# Xử lý trên toàn bộ file trong thư mục hiện tại\n",
+    "process_all_yaml_files()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "2587a69f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import yaml\n",
+    "import os\n",
     "\n",
-    "print(\"🔧 PowerApps YAML Control Version Remover\")\n",
-    "print(\"=\" * 50)\n",
-    "print(f\"Target file: {file_path}\")\n",
-    "print()\n",
+    "def extract_control_structure(file_path):\n",
+    "    \"\"\"\n",
+    "    Extract control structure (name, type, children) from YAML file\n",
+    "    Returns a dict containing only control hierarchies\n",
+    "    \"\"\"\n",
+    "    print(f\"\\n🔍 Extracting control structure from: {file_path}\")\n",
+    "    \n",
+    "    try:\n",
+    "        # Read YAML file\n",
+    "        with open(file_path, 'r', encoding='utf-8') as f:\n",
+    "            yaml_content = yaml.safe_load(f)\n",
+    "            \n",
+    "        def extract_controls(node, path=''):\n",
+    "            if not isinstance(node, dict):\n",
+    "                return None\n",
+    "                \n",
+    "            result = {}\n",
+    "            \n",
+    "            for key, value in node.items():\n",
+    "                if isinstance(value, dict):\n",
+    "                    # Check if this is a control node\n",
+    "                    if 'Control' in value:\n",
+    "                        control_info = {\n",
+    "                            'type': value['Control'],\n",
+    "                            'children': {}\n",
+    "                        }\n",
+    "                        \n",
+    "                        # Extract children if they exist\n",
+    "                        if 'Children' in value:\n",
+    "                            for child_key, child_value in value['Children'].items():\n",
+    "                                child_structure = extract_controls(child_value)\n",
+    "                                if child_structure:\n",
+    "                                    control_info['children'][child_key] = child_structure\n",
+    "                                    \n",
+    "                        result[key] = control_info\n",
+    "                    else:\n",
+    "                        # Recurse into non-control nodes\n",
+    "                        child_structure = extract_controls(value)\n",
+    "                        if child_structure:\n",
+    "                            result.update(child_structure)\n",
+    "                            \n",
+    "            return result if result else None\n",
+    "            \n",
+    "        # Start extraction from root\n",
+    "        control_structure = extract_controls(yaml_content)\n",
+    "        \n",
+    "        print(\"✅ Control structure extracted successfully\")\n",
+    "        return control_structure\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Error extracting control structure: {str(e)}\")\n",
+    "        return None\n",
     "\n",
-    "# Process the file\n",
-    "success = remove_control_versions(file_path)\n",
+    "def extract_control_structure_from_file(file_path):\n",
+    "    \"\"\"\n",
+    "    Extract control structure from a single YAML file\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        control_structure = extract_control_structure(file_path)\n",
+    "        if control_structure:\n",
+    "            return {file_path: control_structure}\n",
+    "        return None\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Error processing file {file_path}: {str(e)}\")\n",
+    "        return None\n",
     "\n",
-    "if success:\n",
-    "    print(\"\\n🎉 Process completed successfully!\")\n",
-    "else:\n",
-    "    print(\"\\n💥 Process failed!\")\n",
-    "    sys.exit(1)"
+    "def extract_control_structures_from_dir(directory=\".\"):\n",
+    "    \"\"\"\n",
+    "    Extract control structures from all YAML files in directory\n",
+    "    \"\"\"\n",
+    "    print(f\"\\n📂 Processing directory: {directory}\")\n",
+    "    \n",
+    "    try:\n",
+    "        # Get current directory\n",
+    "        current_dir = os.getcwd()\n",
+    "        target_dir = os.path.join(current_dir, directory) if directory != \".\" else current_dir\n",
+    "        \n",
+    "        # Get all files in directory\n",
+    "        if not os.path.exists(target_dir):\n",
+    "            print(f\"❌ Directory does not exist: {target_dir}\")\n",
+    "            return None\n",
+    "            \n",
+    "        all_files = os.listdir(target_dir)\n",
+    "        \n",
+    "        # Filter YAML files (including .yml extension)\n",
+    "        yaml_files = [f for f in all_files if f.endswith(('.yaml', '.yml'))]\n",
+    "        \n",
+    "        if not yaml_files:\n",
+    "            print(\"⚠️ No YAML files found in directory\")\n",
+    "            return None\n",
+    "            \n",
+    "        print(f\"Found {len(yaml_files)} YAML files: {', '.join(yaml_files)}\")\n",
+    "        \n",
+    "        # Process each file\n",
+    "        control_structures = {}\n",
+    "        success_count = 0\n",
+    "        \n",
+    "        for file_name in yaml_files:\n",
+    "            file_path = os.path.join(target_dir, file_name)\n",
+    "            print(f\"\\n📄 Processing: {file_name}\")\n",
+    "            print(\"-\" * 40)\n",
+    "            \n",
+    "            result = extract_control_structure_from_file(file_path)\n",
+    "            if result:\n",
+    "                control_structures.update(result)\n",
+    "                success_count += 1\n",
+    "                \n",
+    "        # Summary\n",
+    "        print(\"\\n📊 Summary:\")\n",
+    "        print(f\"Total files processed: {len(yaml_files)}\")\n",
+    "        print(f\"Successfully processed: {success_count}\")\n",
+    "        print(f\"Failed: {len(yaml_files) - success_count}\")\n",
+    "        \n",
+    "        print(f\"✅ Processed {len(control_structures)} files successfully\")\n",
+    "        return control_structures\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Error processing directory: {str(e)}\")\n",
+    "        return None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "e6b78309",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "📂 Processing directory: .\n",
+      "Found 5 YAML files: ApprovalHistoryScreen.backup.yaml, EmployeeDashboardScreen.backup.yaml, ReportScreen.backup.yaml, UserManagementScreen.backup.yaml, UserManagementScreen.yaml\n",
+      "\n",
+      "📄 Processing: ApprovalHistoryScreen.backup.yaml\n",
+      "----------------------------------------\n",
+      "\n",
+      "🔍 Extracting control structure from: d:\\Global Workspace\\Git PowerApp Project\\BHK_NameCard\\ApprovalHistoryScreen.backup.yaml\n",
+      "✅ Control structure extracted successfully\n",
+      "\n",
+      "📄 Processing: EmployeeDashboardScreen.backup.yaml\n",
+      "----------------------------------------\n",
+      "\n",
+      "🔍 Extracting control structure from: d:\\Global Workspace\\Git PowerApp Project\\BHK_NameCard\\EmployeeDashboardScreen.backup.yaml\n",
+      "✅ Control structure extracted successfully\n",
+      "\n",
+      "📄 Processing: ReportScreen.backup.yaml\n",
+      "----------------------------------------\n",
+      "\n",
+      "🔍 Extracting control structure from: d:\\Global Workspace\\Git PowerApp Project\\BHK_NameCard\\ReportScreen.backup.yaml\n",
+      "✅ Control structure extracted successfully\n",
+      "\n",
+      "📄 Processing: UserManagementScreen.backup.yaml\n",
+      "----------------------------------------\n",
+      "\n",
+      "🔍 Extracting control structure from: d:\\Global Workspace\\Git PowerApp Project\\BHK_NameCard\\UserManagementScreen.backup.yaml\n",
+      "✅ Control structure extracted successfully\n",
+      "\n",
+      "📄 Processing: UserManagementScreen.yaml\n",
+      "----------------------------------------\n",
+      "\n",
+      "🔍 Extracting control structure from: d:\\Global Workspace\\Git PowerApp Project\\BHK_NameCard\\UserManagementScreen.yaml\n",
+      "✅ Control structure extracted successfully\n",
+      "\n",
+      "📊 Summary:\n",
+      "Total files processed: 5\n",
+      "Successfully processed: 0\n",
+      "Failed: 5\n",
+      "✅ Processed 0 files successfully\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "extract_control_structures_from_dir()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b0816c7",
+   "id": "6185aaf6",
    "metadata": {},
    "outputs": [],
    "source": []
