Add EmployeeDashboardScreen and enhance user management
Added new EmployeeDashboardScreen.yaml for employee dashboard functionality. Improved UserManagementScreen.yaml with better UserRole handling, validation, and collection refresh logic. Updated dropdown default selections and fixed SharePoint lookup and removal logic for user and role management.

--- a/rmv_version.ipynb
+++ b/rmv_version.ipynb
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "8b0816c7",
    "metadata": {},
    "outputs": [
@@ -285,9 +285,16 @@
      "output_type": "stream",
      "text": [
       "🔍 Scanning for YAML files...\n",
-      "📑 Found 1 YAML files to process:\n",
+      "📑 Found 2 YAML files to process:\n",
+      "  • EmployeeDashboardScreen.yaml\n",
       "  • UserManagementScreen.yaml\n",
       "\n",
+      "\n",
+      "📄 Processing: EmployeeDashboardScreen.yaml\n",
+      "----------------------------------------\n",
+      "📖 Reading file: EmployeeDashboardScreen.yaml\n",
+      "🔄 Processing control version replacements...\n",
+      "ℹ️  No version numbers found to remove.\n",
       "\n",
       "📄 Processing: UserManagementScreen.yaml\n",
       "----------------------------------------\n",
@@ -311,8 +318,8 @@
       "📁 Original file backed up to: UserManagementScreen.yaml.backup\n",
       "\n",
       "📊 Summary:\n",
-      "Total files processed: 1\n",
-      "Successfully processed: 1\n",
+      "Total files processed: 2\n",
+      "Successfully processed: 2\n",
       "Failed: 0\n"
      ]
     },
@@ -322,14 +329,14 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Chọn truyền 1 file vào hoặc nhập vào input 1 file để sử dụng\n",
-    "# process_yaml_file()\n",
+    "# process_yaml_file(\"EmployeeDashboardScreen.yaml\")\n",
     "\n",
     "# Xử lý trên toàn bộ file trong thư mục hiện tại\n",
     "process_all_yaml_files()"
