--- a/rmv_version.ipynb
+++ b/rmv_version.ipynb
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "8b0816c7",
    "metadata": {},
    "outputs": [
@@ -285,10 +285,17 @@
      "output_type": "stream",
      "text": [
       "🔍 Scanning for YAML files...\n",
-      "📑 Found 2 YAML files to process:\n",
+      "📑 Found 3 YAML files to process:\n",
+      "  • ApprovalHistoryScreen.yaml\n",
       "  • EmployeeDashboardScreen.yaml\n",
       "  • UserManagementScreen.yaml\n",
       "\n",
+      "\n",
+      "📄 Processing: ApprovalHistoryScreen.yaml\n",
+      "----------------------------------------\n",
+      "📖 Reading file: ApprovalHistoryScreen.yaml\n",
+      "🔄 Processing control version replacements...\n",
+      "ℹ️  No version numbers found to remove.\n",
       "\n",
       "📄 Processing: EmployeeDashboardScreen.yaml\n",
       "----------------------------------------\n",
@@ -300,26 +307,11 @@
       "----------------------------------------\n",
       "📖 Reading file: UserManagementScreen.yaml\n",
       "🔄 Processing control version replacements...\n",
-      "  ├─ Found 20 instances of pattern: GroupContainer@\\d+\\.\\d+\\.\\d+\n",
-      "  ├─ Found 36 instances of pattern: Label@\\d+\\.\\d+\\.\\d+\n",
-      "  ├─ Found 14 instances of pattern: Classic/Button@\\d+\\.\\d+\\.\\d+\n",
-      "  ├─ Found 9 instances of pattern: Classic/TextInput@\\d+\\.\\d+\\.\\d+\n",
-      "  ├─ Found 4 instances of pattern: DropDown@\\d+\\.\\d+\\.\\d+\n",
-      "  ├─ Found 4 instances of pattern: Rectangle@\\d+\\.\\d+\\.\\d+\n",
-      "  ├─ Found 1 instances of pattern: Classic/Icon@\\d+\\.\\d+\\.\\d+\n",
-      "  ├─ Found 1 instances of pattern: DataTable@\\d+\\.\\d+\\.\\d+\n",
-      "  ├─ Found 6 instances of pattern: DataTableColumn@\\d+\\.\\d+\\.\\d+\n",
-      "  ├─ Found 1 instances of pattern: Form@\\d+\\.\\d+\\.\\d+\n",
-      "  ├─ Found 2 instances of pattern: ComboBox@\\d+\\.\\d+\\.\\d+\n",
-      "  ├─ Found 6 instances of pattern: TypedDataCard@\\d+\\.\\d+\\.\\d+\n",
-      "💾 Creating backup: UserManagementScreen.yaml.backup\n",
-      "✏️  Writing cleaned content back to: UserManagementScreen.yaml\n",
-      "✅ Successfully removed 104 version numbers!\n",
-      "📁 Original file backed up to: UserManagementScreen.yaml.backup\n",
+      "ℹ️  No version numbers found to remove.\n",
       "\n",
       "📊 Summary:\n",
-      "Total files processed: 2\n",
-      "Successfully processed: 2\n",
+      "Total files processed: 3\n",
+      "Successfully processed: 3\n",
       "Failed: 0\n"
      ]
     },
@@ -329,7 +321,7 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
