--- a/rmv_version.ipynb
+++ b/rmv_version.ipynb
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "8b0816c7",
    "metadata": {},
    "outputs": [
@@ -285,9 +285,10 @@
      "output_type": "stream",
      "text": [
       "🔍 Scanning for YAML files...\n",
-      "📑 Found 3 YAML files to process:\n",
+      "📑 Found 4 YAML files to process:\n",
       "  • ApprovalHistoryScreen.yaml\n",
       "  • EmployeeDashboardScreen.yaml\n",
+      "  • ReportScreen.yaml\n",
       "  • UserManagementScreen.yaml\n",
       "\n",
       "\n",
@@ -303,6 +304,25 @@
       "🔄 Processing control version replacements...\n",
       "ℹ️  No version numbers found to remove.\n",
       "\n",
+      "📄 Processing: ReportScreen.yaml\n",
+      "----------------------------------------\n",
+      "📖 Reading file: ReportScreen.yaml\n",
+      "🔄 Processing control version replacements...\n",
+      "  ├─ Found 15 instances of pattern: GroupContainer@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 27 instances of pattern: Label@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 6 instances of pattern: Classic/Button@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 5 instances of pattern: DropDown@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 1 instances of pattern: Rectangle@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 1 instances of pattern: Classic/Icon@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 1 instances of pattern: DataTable@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 10 instances of pattern: DataTableColumn@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 1 instances of pattern: Gallery@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 2 instances of pattern: DatePicker@\\d+\\.\\d+\\.\\d+\n",
+      "💾 Creating backup: ReportScreen.yaml.backup\n",
+      "✏️  Writing cleaned content back to: ReportScreen.yaml\n",
+      "✅ Successfully removed 69 version numbers!\n",
+      "📁 Original file backed up to: ReportScreen.yaml.backup\n",
+      "\n",
       "📄 Processing: UserManagementScreen.yaml\n",
       "----------------------------------------\n",
       "📖 Reading file: UserManagementScreen.yaml\n",
@@ -310,8 +330,8 @@
       "ℹ️  No version numbers found to remove.\n",
       "\n",
       "📊 Summary:\n",
-      "Total files processed: 3\n",
-      "Successfully processed: 3\n",
+      "Total files processed: 4\n",
+      "Successfully processed: 4\n",
       "Failed: 0\n"
      ]
     },
@@ -321,7 +341,7 @@
        "True"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
