--- a/rmv_version.ipynb
+++ b/rmv_version.ipynb
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "8b0816c7",
    "metadata": {},
    "outputs": [
@@ -285,12 +285,19 @@
      "output_type": "stream",
      "text": [
       "🔍 Scanning for YAML files...\n",
-      "📑 Found 4 YAML files to process:\n",
+      "📑 Found 5 YAML files to process:\n",
+      "  • App.yaml\n",
       "  • ApprovalHistoryScreen.yaml\n",
       "  • EmployeeDashboardScreen.yaml\n",
       "  • ReportScreen.yaml\n",
       "  • UserManagementScreen.yaml\n",
       "\n",
+      "\n",
+      "📄 Processing: App.yaml\n",
+      "----------------------------------------\n",
+      "📖 Reading file: App.yaml\n",
+      "🔄 Processing control version replacements...\n",
+      "ℹ️  No version numbers found to remove.\n",
       "\n",
       "📄 Processing: ApprovalHistoryScreen.yaml\n",
       "----------------------------------------\n",
@@ -308,19 +315,17 @@
       "----------------------------------------\n",
       "📖 Reading file: ReportScreen.yaml\n",
       "🔄 Processing control version replacements...\n",
-      "  ├─ Found 15 instances of pattern: GroupContainer@\\d+\\.\\d+\\.\\d+\n",
-      "  ├─ Found 27 instances of pattern: Label@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 12 instances of pattern: GroupContainer@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 9 instances of pattern: Label@\\d+\\.\\d+\\.\\d+\n",
       "  ├─ Found 6 instances of pattern: Classic/Button@\\d+\\.\\d+\\.\\d+\n",
       "  ├─ Found 5 instances of pattern: DropDown@\\d+\\.\\d+\\.\\d+\n",
-      "  ├─ Found 1 instances of pattern: Rectangle@\\d+\\.\\d+\\.\\d+\n",
       "  ├─ Found 1 instances of pattern: Classic/Icon@\\d+\\.\\d+\\.\\d+\n",
       "  ├─ Found 1 instances of pattern: DataTable@\\d+\\.\\d+\\.\\d+\n",
-      "  ├─ Found 10 instances of pattern: DataTableColumn@\\d+\\.\\d+\\.\\d+\n",
-      "  ├─ Found 1 instances of pattern: Gallery@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 7 instances of pattern: DataTableColumn@\\d+\\.\\d+\\.\\d+\n",
       "  ├─ Found 2 instances of pattern: DatePicker@\\d+\\.\\d+\\.\\d+\n",
       "💾 Creating backup: ReportScreen.yaml.backup\n",
       "✏️  Writing cleaned content back to: ReportScreen.yaml\n",
-      "✅ Successfully removed 69 version numbers!\n",
+      "✅ Successfully removed 43 version numbers!\n",
       "📁 Original file backed up to: ReportScreen.yaml.backup\n",
       "\n",
       "📄 Processing: UserManagementScreen.yaml\n",
@@ -330,8 +335,8 @@
       "ℹ️  No version numbers found to remove.\n",
       "\n",
       "📊 Summary:\n",
-      "Total files processed: 4\n",
-      "Successfully processed: 4\n",
+      "Total files processed: 5\n",
+      "Successfully processed: 5\n",
       "Failed: 0\n"
      ]
     },
@@ -341,7 +346,7 @@
        "True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
