Enhance user deletion logic and UI in management screen
Improved the user deletion workflow in UserManagementScreen.yaml by preventing self-deletion, updating collections after deletion, and refining UI responsiveness and layout. Also updated ReportScreen.yaml to use base SharePoint table names without suffixes and made minor control name adjustments. Updated rmv_version.ipynb to reflect new processing results and added a utility function for removing table suffixes.

--- a/rmv_version.ipynb
+++ b/rmv_version.ipynb
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "id": "8b0816c7",
    "metadata": {},
    "outputs": [
@@ -315,24 +315,28 @@
       "----------------------------------------\n",
       "📖 Reading file: ReportScreen.yaml\n",
       "🔄 Processing control version replacements...\n",
-      "  ├─ Found 12 instances of pattern: GroupContainer@\\d+\\.\\d+\\.\\d+\n",
-      "  ├─ Found 9 instances of pattern: Label@\\d+\\.\\d+\\.\\d+\n",
-      "  ├─ Found 6 instances of pattern: Classic/Button@\\d+\\.\\d+\\.\\d+\n",
-      "  ├─ Found 5 instances of pattern: DropDown@\\d+\\.\\d+\\.\\d+\n",
-      "  ├─ Found 1 instances of pattern: Classic/Icon@\\d+\\.\\d+\\.\\d+\n",
-      "  ├─ Found 1 instances of pattern: DataTable@\\d+\\.\\d+\\.\\d+\n",
-      "  ├─ Found 7 instances of pattern: DataTableColumn@\\d+\\.\\d+\\.\\d+\n",
-      "  ├─ Found 2 instances of pattern: DatePicker@\\d+\\.\\d+\\.\\d+\n",
-      "💾 Creating backup: ReportScreen.yaml.backup\n",
-      "✏️  Writing cleaned content back to: ReportScreen.yaml\n",
-      "✅ Successfully removed 43 version numbers!\n",
-      "📁 Original file backed up to: ReportScreen.yaml.backup\n",
+      "ℹ️  No version numbers found to remove.\n",
       "\n",
       "📄 Processing: UserManagementScreen.yaml\n",
       "----------------------------------------\n",
       "📖 Reading file: UserManagementScreen.yaml\n",
       "🔄 Processing control version replacements...\n",
-      "ℹ️  No version numbers found to remove.\n",
+      "  ├─ Found 20 instances of pattern: GroupContainer@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 36 instances of pattern: Label@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 14 instances of pattern: Classic/Button@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 9 instances of pattern: Classic/TextInput@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 4 instances of pattern: DropDown@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 4 instances of pattern: Rectangle@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 1 instances of pattern: Classic/Icon@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 1 instances of pattern: DataTable@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 6 instances of pattern: DataTableColumn@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 1 instances of pattern: Form@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 2 instances of pattern: ComboBox@\\d+\\.\\d+\\.\\d+\n",
+      "  ├─ Found 6 instances of pattern: TypedDataCard@\\d+\\.\\d+\\.\\d+\n",
+      "💾 Creating backup: UserManagementScreen.yaml.backup\n",
+      "✏️  Writing cleaned content back to: UserManagementScreen.yaml\n",
+      "✅ Successfully removed 104 version numbers!\n",
+      "📁 Original file backed up to: UserManagementScreen.yaml.backup\n",
       "\n",
       "📊 Summary:\n",
       "Total files processed: 5\n",
@@ -346,7 +350,7 @@
        "True"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,12 +369,57 @@
    "id": "2587a69f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import re\n",
+    "\n",
+    "def remove_table_suffix(file_path, output_path=None):\n",
+    "    # Đọc nội dung file\n",
+    "    with open(file_path, 'r', encoding='utf-8') as f:\n",
+    "        content = f.read()\n",
+    "\n",
+    "    # Regex để tìm tất cả các tên kết thúc bằng _1 và không nằm giữa số/chữ thường\n",
+    "    cleaned_content = re.sub(r'\\b([A-Za-z0-9]+)_1\\b', r'\\1', content)\n",
+    "\n",
+    "    # Nếu không có output_path thì ghi đè file gốc\n",
+    "    if output_path is None:\n",
+    "        output_path = file_path\n",
+    "\n",
+    "    # Ghi lại file đã xử lý\n",
+    "    with open(output_path, 'w', encoding='utf-8') as f:\n",
+    "        f.write(cleaned_content)\n",
+    "\n",
+    "    print(f\"✅ Done! Updated file saved at: {output_path}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "e6b78309",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Done! Updated file saved at: d:\\Global Workspace\\Git PowerApp Project\\BHK_NameCard\\ReportScreen.yaml\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_name = \"ReportScreen.yaml\"  # 🟢 Đổi tên file đầu vào ở đây\n",
+    "current_dir = os.getcwd()  # 👈 Lấy thư mục hiện tại trong notebook\n",
+    "\n",
+    "full_path = os.path.join(current_dir, file_name)\n",
+    "\n",
+    "# Gọi hàm xử lý\n",
+    "remove_table_suffix(full_path)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6b78309",
+   "id": "6185aaf6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -378,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6185aaf6",
+   "id": "c75ce72b",
    "metadata": {},
    "outputs": [],
    "source": []
